data/derived/comb/progs/unify/prog6924.ml.out
Characters 96-100:
  in wwhile ((fx), f);;
             ^^^^
Error: This expression has type int -> int
       but an expression was expected of type int -> int * bool
       Type int is not compatible with type int * bool 
